Remoed DeleteProjectUser as I see it as redundant
